@@ -1,1 +1,12 @@
-*.dat
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache
+config.h
+config.h.in
+config.status
+configure
+intltool*
+libtool
+stamp-h
+stamp-h.in
