@@ -1,0 +1,1 @@
+Carlos Perelló Marín <carlos@gnome.org>
