@@ -1,0 +1,5 @@
+Makefile
+Makefile.in
+Makefile.in.in
+POTFILES
+*.pot
