@@ -1,5 +1,14 @@
 2003-08-03  Carlos Perelló Marín <carlos@gnome.org>
 
+	* AUTHORS: Added with my name as required by automake.
+	* configure.ac: We need always latest intltool release (0.26 now).
+	Added a check for the popt library
+	* .cvsignore: Updated
+	* src/Makefile.am: Added the popt libraries.
+	* src/status*[ch]: Fixed small bugs, now it build!!
+
+2003-08-03  Carlos Perelló Marín <carlos@gnome.org>
+
 	* COPYING, Makefile.am, NEWS, README, autogen.sh, configure.ac,
 	data/Makefile.am, doc/Makefile.am, po/POTFILES.in, src/Makefile.am:
 	Imported the initial autoconf/automake support.
